# EOS-DEX

./: README.md
eosio.contracts.exchange/: .gitignore  CMakeLists.txt  EOSDevChainDockerfile  README.md  build.sh  deploy_blockchain.sh  run_tests.sh
eosio.contracts.exchange/contracts/: CMakeLists.txt
eosio.contracts.exchange/contracts/token.exchange/: CMakeLists.txt  README.md
eosio.contracts.exchange/contracts/token.exchange/docs/: dex_contract_design.sketch
eosio.contracts.exchange/contracts/token.exchange/include/token.exchange/: token.exchange.hpp  token.exchange_base.hpp
eosio.contracts.exchange/contracts/token.exchange/src/: token.exchange.cpp  token.exchange_base.cpp
eosio.contracts.exchange/docker/: Dockerfile.ubuntu  README.md
eosio.contracts.exchange/scripts/: run_chain.sh  run_nodeos.sh
eosio.contracts.exchange/tests/: CMakeLists.txt  EosioTester.cmake  contracts.hpp.in
eosio.contracts.exchange/tests/eosio_contract_tests/: CMakeLists.txt  mock_eosiolib.hpp  token_exchange_action_tests.cpp  token_exchange_tests.cpp
eosio.contracts.exchange/tests/eosio_contract_tests/mock_lib/: asset.hpp  fixed_bytes.hpp  name.hpp  print.h  print.hpp  serialize.hpp  symbol.hpp  system.h  system.hpp  types.h
eosio.exchange.client/: .env  .env.development  .env.production  README.md  package.json
eosio.exchange.client/docs/: logos.sketch  token-exchange.sketch
eosio.exchange.client/public/: index.html
eosio.exchange.client/src/: App.css  App.vue  main.js
eosio.exchange.client/src/assets/: depth.json
eosio.exchange.client/src/components/: Landing.vue  Nav.vue
eosio.exchange.client/src/components/About/: About.vue
eosio.exchange.client/src/components/Account/: AccountInfo.vue
eosio.exchange.client/src/components/Charts/: CandleChart.vue  DepthChart.vue  TODO.txt
eosio.exchange.client/src/plugins/: vuetify.js
(+23 files in other folders)
